fix(bugfix/elements): correct spacing

--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,6 +1,6 @@
 .element__description {
   display: flex;
-  padding: 25px 21px 31px 15px;
+  margin: 25px 15px 31px 21px;
   justify-content: space-between;
   max-width: 246px;
   min-height: 23px;
